# aya_minifirewall

./: .gitignore  Cargo.toml  README.md  build.sh
.github/: README.md  permissions.yml
.github/workflows/: build-and-release.yml  ci.yml  release.yml
aya-minifirewall-ebpf/: Cargo.toml  build.rs
aya-minifirewall-ebpf/src/: main.rs
src/: main.rs
