[package]
name = "aya-minifirewall"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple firewall demo using Aya eBPF framework"
license = "MIT"

[[bin]]
name = "aya-minifirewall"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
ctrlc = "3.4"

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.12"
aya-log = "0.2"

[build-dependencies]
aya-build = "0.1"
